--- a/caykimnho_studio/Views/Home/Index.cshtml
+++ b/caykimnho_studio/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 }
 
 <!--slider area start-->
-<section class="slider_section mb-63">
+<section class="slider_section mb-63 ph-col-12">
     <div class="slider_area slick_slider_activation" data-slick='{
             "slidesToShow": 1,
             "slidesToScroll": 1,
@@ -143,7 +143,7 @@
                     }
                 </ul>
                 <div class="all_product">
-                    <a href="@Url.Action("product", "home")">Xem thêm</a>
+                    <a onclick="{ $('#Loaders').fadeIn('slow') }" href="@Url.Action("product", "home")">Xem thêm</a>
                 </div>
             </div>
         </div>
@@ -196,7 +196,7 @@
                                             </ul>
                                         </div>
                                         <h4 class="product_name">
-                                            <a href="@Url.Action("productdetail", "home", new {id = item.ID})">@item.Name</a>
+                                            <a onclick="{ $('#Loaders').fadeIn('slow') }" href="@Url.Action("productdetail", "home", new {id = item.ID})">@item.Name</a>
                                         </h4>
                                         <div class="price_box">
                                             @{
@@ -271,7 +271,7 @@
                                                 </ul>
                                             </div>
                                             <h4 class="product_name">
-                                                <a href="@Url.Action("productdetail", "home", new {id = item.ID})">@item.Name</a>
+                                                <a onclick="{ $('#Loaders').fadeIn('slow') }" href="@Url.Action("productdetail", "home", new {id = item.ID})">@item.Name</a>
                                             </h4>
                                             <div class="price_box">
                                                 @{
