--- a/caykimnho_studio/Views/Shared/_Layout.cshtml
+++ b/caykimnho_studio/Views/Shared/_Layout.cshtml
@@ -48,7 +48,8 @@
     <meta property="og:image" content="#" />
     <meta property="og:description"
           content="Cây Kim Nhỏ - Quần áo nữ handmade siêu cá tính, dễ thương, xinh xắn, phong cách thời thượng cho mọi lứa tuổi." />
-
+    <script src="~/Content/assets/js/vendor/jquery-3.4.1.min.js"></script>
+    <link href="~/Content/Loading/loading.css" rel="stylesheet" />
     <!-- Add site Favicon -->
     <link rel="icon" href="https://hasthemes.com/wp-content/uploads/2019/04/cropped-favicon-32x32.png" sizes="32x32" />
     <link rel="icon" href="https://hasthemes.com/wp-content/uploads/2019/04/cropped-favicon-192x192.png"
@@ -56,6 +57,7 @@
     <link rel="apple-touch-icon" href="https://hasthemes.com/wp-content/uploads/2019/04/cropped-favicon-180x180.png" />
     <meta name="msapplication-TileImage"
           content="https://hasthemes.com/wp-content/uploads/2019/04/cropped-favicon-270x270.png" />
+
 
     <!-- CSS
     ========================= -->
@@ -75,14 +77,17 @@
 
     <!--modernizr min js here-->
     <script src="~/Content/assets/js/vendor/modernizr-3.7.1.min.js"></script>
-
+    <link rel="stylesheet" href="https://unpkg.com/placeholder-loading/dist/css/placeholder-loading.min.css">
 
     <!-- Structured Data  -->
 
 </head>
 
 <body>
-
+    <div class="loaders" id="Loaders"></div>
+    <script>
+        $('#Loaders').fadeIn('slow');
+    </script>
     <!--offcanvas menu area start-->
     <div class="body_overlay">
 
@@ -146,7 +151,6 @@
         </div>
     </div>
     <!--mini cart end-->
-
     <!-- menu bar -->
     <div class="offcanvas_menu">
         <div class="container">
@@ -191,23 +195,23 @@
                         <div id="menu" class="text-left ">
                             <ul class="offcanvas_main_menu">
                                 <li class="menu-item-has-children active">
-                                    <a href="@Url.Action("index", "home")">Trang chủ</a>
+                                    <a onclick="{ $('#Loaders').fadeIn('slow') }" href="@Url.Action("index", "home")">Trang chủ</a>
                                 </li>
                                 <li class="menu-item-has-children">
-                                    <a href="@Url.Action("product", "home")">Sản phẩm</a>
+                                    <a onclick="{ $('#Loaders').fadeIn('slow') }" href="@Url.Action("product", "home")">Sản phẩm</a>
                                     <ul class="sub-menu">
                                         @foreach (var item in categories)
                                         {
-                                            <li><a href="#">@item.Name</a></li>
+                                            <li><a onclick="{ $('#Loaders').fadeIn('slow') }" href="#">@item.Name</a></li>
                                         }
                                     </ul>
                                 </li>
                                 <li class="menu-item-has-children">
-                                    <a href="@Url.Action("about", "home")">Giới thiệu</a>
+                                    <a onclick="{ $('#Loaders').fadeIn('slow') }" href="@Url.Action("about", "home")">Giới thiệu</a>
                                 </li>
-                                <li><a href="#">Chương trình Khuyến Mãi</a></li>
-                                <li><a href="#">Chính sách đổi trả</a></li>
-                                <li><a href="#">Tra cứu đơn hàng</a></li>
+                                <li><a onclick="{ $('#Loaders').fadeIn('slow') }" href="#">Chương trình Khuyến Mãi</a></li>
+                                <li><a onclick="{ $('#Loaders').fadeIn('slow') }" href="#">Chính sách đổi trả</a></li>
+                                <li><a onclick="{ $('#Loaders').fadeIn('slow') }" href="#">Tra cứu đơn hàng</a></li>
                             </ul>
                         </div>
                     </div>
@@ -215,7 +219,7 @@
             </div>
         </div>
     </div>
-    
+
     <!-- Munu home mobile -->
     <div style="width: 98% ; padding-top: 10px;background-color: white; border-top-right-radius: 15px; border-top-left-radius: 15px;"
          class="mobile-bottom-navigation">
@@ -224,15 +228,10 @@
                 class="btn btn-primary canvas_open">
             <i style="font-size: 16px; color: white;" class="icon-menu icons"></i>
         </button>
-
-        <a role="button" href="@Url.Action("index", "home")"
-                style="margin-top: 5px; margin-bottom: 5px ;border: 1px; border-radius: 100px; height: 20%; width: 24%;"
-                class="btn btn-primary">
+        <a role="button" onclick="{ $('#Loaders').fadeIn('slow') }" href="@Url.Action("index", "home")"
+           style="margin-top: 5px; margin-bottom: 5px ;border: 1px; border-radius: 100px; height: 20%; width: 24%;"
+           class="btn btn-primary">
             <i style="font-size: 16px; color: white;" class="icon-home icons"></i>
-        </a>
-        <a hidden id="openCartModal" href="#" class="shopping_cart">
-            <i style="font-size: 16px; color: white;"
-               class="icon-basket-loaded icons"></i>
         </a>
         <button style="margin-top: 5px; margin-bottom: 5px ;margin-right: 5px ;border: 1px; border-radius: 100px; height: 20%; width: 24%;"
                 class="btn btn-primary shopping_carts_click">
@@ -302,7 +301,7 @@
                                 <a href="javascript:void(0)"><i class="ion-navicon"></i></a>
                             </div>
                             <div class="header_logo">
-                                <a class="sticky_none" href="@Url.Action("index", "home")">
+                                <a class="sticky_none" onclick="{ $('#Loaders').fadeIn('slow') }" href="@Url.Action("index", "home")">
                                     <img width="90px"
                                          style="margin-top: -20px; margin-bottom: -20px;" src="~/Content/assets/img/logo/logos.png"
                                          alt="">
@@ -312,21 +311,21 @@
                             <div class="main_menu d-none d-lg-block">
                                 <nav>
                                     <ul class="d-flex">
-                                        <li><a class="active" href="@Url.Action("index", "home")">Trang chủ</a> </li>
+                                        <li><a class="active" onclick="{ $('#Loaders').fadeIn('slow') }" href="@Url.Action("index", "home")">Trang chủ</a> </li>
                                         <li>
-                                            <a href="@Url.Action("product", "home")">Sản phẩm</a>
+                                            <a onclick="{ $('#Loaders').fadeIn('slow') }" href="@Url.Action("product", "home")">Sản phẩm</a>
                                             <ul class="sub_menu">
                                                 @foreach (var item in categories)
                                                 {
-                                                    <li><a href="#">@item.Name</a></li>
+                                                    <li><a onclick="{ $('#Loaders').fadeIn('slow') }" href="#">@item.Name</a></li>
                                                 }
                                             </ul>
                                         </li>
-                                        <li><a href="@Url.Action("about", "home")">Giới thiệu</a></li>
+                                        <li><a onclick="{ $('#Loaders').fadeIn('slow') }" href="@Url.Action("about", "home")">Giới thiệu</a></li>
 
-                                        <li><a href="#">Khuyến Mãi</a></li>
-                                        <li><a href="#">Đổi trả</a></li>
-                                        <li><a href="#">đơn hàng</a></li>
+                                        <li><a onclick="{ $('#Loaders').fadeIn('slow') }" href="#">Khuyến Mãi</a></li>
+                                        <li><a onclick="{ $('#Loaders').fadeIn('slow') }" href="#">Đổi trả</a></li>
+                                        <li><a onclick="{ $('#Loaders').fadeIn('slow') }" href="#">đơn hàng</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -387,7 +386,7 @@
                 <div class="col-lg-5 col-md-5 col-sm-5">
                     <div class="footer_widget_list">
                         <div class="footer_logo">
-                            <a href="@Url.Action("Index", "Home")"><img src="~/Content/assets/img/logo/logos.png" width="120px" alt=""></a>
+                            <a onclick="{ $('#Loaders').fadeIn('slow') }" href="@Url.Action("Index", "Home")"><img src="~/Content/assets/img/logo/logos.png" width="120px" alt=""></a>
                         </div>
                         <div class="footer_contact">
                             <div class="footer_contact_list">
@@ -411,10 +410,10 @@
                     <div class="footer_widget_list text-right">
                         <div class="footer_menu">
                             <ul class="d-flex justify-content-end">
-                                <li><a href="@Url.Action("Index", "Home")">Trang chủ</a></li>
-                                <li><a href="@Url.Action("Product", "Home")">Sản phẩm</a></li>
-                                <li><a href="@Url.Action("About", "Home")">Giới thiệu</a></li>
-                                <li><a href="#">CTKM</a></li>
+                                <li><a onclick="{ $('#Loaders').fadeIn('slow') }" href="@Url.Action("Index", "Home")">Trang chủ</a></li>
+                                <li><a onclick="{ $('#Loaders').fadeIn('slow') }" href="@Url.Action("Product", "Home")">Sản phẩm</a></li>
+                                <li><a onclick="{ $('#Loaders').fadeIn('slow') }" href="@Url.Action("About", "Home")">Giới thiệu</a></li>
+                                <li><a onclick="{ $('#Loaders').fadeIn('slow') }" href="#">CTKM</a></li>
                             </ul>
                         </div>
                         <div class="footer_social">
@@ -438,7 +437,7 @@
                         </div>
                         <div class="copyright_right">
                             <p>
-                                Copyright © 2023 <a href="https://www.caykimnho.com" target="_blank">
+                                Copyright © @DateTime.Now.Year <a onclick="{ $('#Loaders').fadeIn('slow') }" href="@Url.Action("index", "home")" target="_blank">
                                     <span>
                                         Cây Kim Nhỏ
                                     </span>
@@ -452,11 +451,9 @@
         </div>
     </footer>
     <!--footer area end-->
-
     <!-- JS
     ============================================ -->
 
-    <script src="~/Content/assets/js/vendor/jquery-3.4.1.min.js"></script>
     <script src="~/Content/assets/js/vendor/popper.js"></script>
     <script src="~/Content/assets/js/vendor/bootstrap.min.js"></script>
     <script src="~/Content/assets/js/slick.min.js"></script>
@@ -470,11 +467,17 @@
     <script src="~/Content/assets/js/jquery.instagramFeed.min.js"></script>
     <script src="~/Content/assets/js/jquery.magnific-popup.min.js"></script>
     <script src="~/Content/assets/js/mailchimp-ajax.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/placeholder-loading/dist/css/placeholder-loading.min.css"></script>
     <!-- Main JS -->
     <script src="~/Content/assets/js/main.js"></script>
 
-
+    <script>
+        $(window).on('load', function () {
+            setTimeout(function () {
+                $('#Loaders').fadeOut('slow');
+            }, 100);
+        });
+    </script>
 </body>
 
 </html>
