--- a/caykimnho_studio/Content/assets/css/style.css
+++ b/caykimnho_studio/Content/assets/css/style.css
@@ -1371,7 +1371,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 
 @media only screen and (max-width: 575px) {
     .mini_cart {
-        width: 300px;
+        width: 100%;
     }
 }
 
@@ -1399,14 +1399,16 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
     }
 
 .cart_img {
-    width: 90px;
+    width: 70px;
     margin-right: 10px;
     border: 1px solid transparent;
 }
 
-    .cart_img:hover {
-        border-color: #c8ab78;
-    }
+.cart_img_child {
+    width: 30px;
+    margin-right: 10px;
+    border: 1px solid transparent;
+}
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
     .cart_img {
@@ -1419,11 +1421,6 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
         width: 70px;
     }
 }
-
-.cart_info {
-    width: 63%;
-}
-
     .cart_info a {
         font-weight: 400;
         font-size: 14px;
@@ -1470,10 +1467,10 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 .cart_item {
     overflow: hidden;
     padding: 20px 0;
-    border-bottom: 1px solid #ededed;
+    border-bottom: 1px solid #d8d8d8;
     display: flex;
-    justify-content: space-between;
-}
+/*    justify-content: space-between;
+*/} 
 
 .mini_cart_table {
     padding: 23px 0;
@@ -1511,7 +1508,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 
 .cart_button a {
     text-transform: uppercase;
-    border-radius: 3px;
+    border-radius: 15px;
     font-size: 12px;
     font-weight: 500;
     background: #eef0f1;
@@ -4715,22 +4712,6 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
     padding-right: 5px;
     margin-bottom: 5px;
 }
-
-    .widget_color > ul > li input {
-        position: absolute;
-        top: 50%;
-        transform: translatey(-50%);
-        opacity: 0;
-        cursor: pointer;
-        z-index: -1;
-        width: 100%;
-        height: 30px;
-    }
-
-        .css-checked:checked + .checkmark {
-            background: #c8ab78;
-            color: white;
-        }
 
     .widget_color > ul > li label.color1 {
         background: #ebcccc;
