--- a/caykimnho_studio/Views/Home/productdetail.cshtml
+++ b/caykimnho_studio/Views/Home/productdetail.cshtml
@@ -6,7 +6,7 @@
     var categories = Session["lst-category"] as IEnumerable<Categories>;
     ViewBag.Title = "productdetail";
     Layout = "~/Views/Shared/_Layout.cshtml";
-    List<string> images = Model.Images.Split('#').ToList();
+    var images = Model.Images.Split('#').ToList();
 }
 
 <section class="product_details mb-135">
@@ -18,7 +18,7 @@
                         <div class="zoom_tab_img">
                             @foreach (var image in images)
                             {
-                                <a class="zoom_tabimg_list" href="javascript:void(0)"><img src="@image" alt="tab-thumb"></a>
+                                <a id="targetImages-@image.Split('=')[2]" class="zoom_tabimg_list" href="javascript:void(0)"><img src="@image" alt="tab-thumb"></a>
                             }
                         </div>
                         <div class="product_zoom_main_img">
@@ -34,100 +34,98 @@
             </div>
             <div class="col-lg-6 col-md-6">
                 <div class="product_d_right">
-                    <form action="#">
-                        <h1>@Model.Name</h1>
-                        <div class="product_ratting_review d-flex align-items-center">
-                            <div class=" product_ratting">
-                                <ul class="d-flex">
-                                    <li><a href="#"><i class="ion-ios-star"></i></a></li>
-                                    <li><a href="#"><i class="ion-ios-star"></i></a></li>
-                                    <li><a href="#"><i class="ion-ios-star"></i></a></li>
-                                    <li><a href="#"><i class="ion-ios-star"></i></a></li>
-                                    <li><a href="#"><i class="ion-ios-star"></i></a></li>
-                                </ul>
-                            </div>
-                            <div class="product_review">
-                                <ul class="d-flex">
-                                    <li>4 đánh giá</li>
-                                    <li>Viết đánh giá của bạn</li>
-                                </ul>
-                            </div>
+                    <h1>@Model.Name</h1>
+                    <div class="product_ratting_review d-flex align-items-center">
+                        <div class=" product_ratting">
+                            <ul class="d-flex">
+                                <li><a href="#"><i class="ion-ios-star"></i></a></li>
+                                <li><a href="#"><i class="ion-ios-star"></i></a></li>
+                                <li><a href="#"><i class="ion-ios-star"></i></a></li>
+                                <li><a href="#"><i class="ion-ios-star"></i></a></li>
+                                <li><a href="#"><i class="ion-ios-star"></i></a></li>
+                            </ul>
                         </div>
-                        <div class="price_box">
-                            @{
-                                var sale = Model.DetailProducts.OrderByDescending(o => o.Sale).First().Sale;
-                                var prices = Model.DetailProducts.First().Price;
-                                if (sale != 0)
-                                {
-                                    <span class="current_price">@((prices - (prices * sale)).ToString("0,0"))đ </span>
-                                    <span class="old_price"> @prices.ToString("0,0")đ</span>
-                                }
-                                else
-                                {
-                                    <span class="current_price">@prices.ToString("0,0")đ</span>
-                                }
+                        <div class="product_review">
+                            <ul class="d-flex">
+                                <li>4 đánh giá</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="price_box">
+                        @{
+                            var sale = Model.DetailProducts.OrderByDescending(o => o.Sale).First().Sale;
+                            var prices = Model.DetailProducts.First().Price;
+                            if (sale != 0)
+                            {
+                                <span class="current_price text-danger">@((prices - (prices * sale)).ToString("0,0"))đ </span>
+                                <span class="old_price"> @prices.ToString("0,0")đ</span>
                             }
+                            else
+                            {
+                                <span class="current_price text-danger">@prices.ToString("0,0")đ</span>
+                            }
+                        }
 
-                        </div>
-                        <div class="product_availalbe">
-                            <ul class="d-flex">
-                                <li><i class="icon-layers icons"></i> Kho: <span>@Model.DetailProducts.Sum(s => s.Quantity)</span></li>
-                                <li>Hàng: <span class="stock">May 2 - 15 ngày</span></li>
-                            </ul>
-                        </div>
-                        <div class="product_variant">
-                            <div class="filter__list widget_color d-flex align-items-center">
-                                <h3>Màu sắc</h3>
-                                <ul>
-                                    @foreach (var item in Model.DetailProducts.ToList())
-                                    {
-                                        <li>
-                                            <label class="checkmark color3" for="checkmau-@item.Colors.ID">@item.Colors.Name</label>
-                                            <input name="checkmau-@item.Colors.ID" id="checkmau-@item.Colors.ID" type="checkbox">
-                                        </li>
-                                    }
-                                </ul>
-                            </div>
-                            <div class="filter__list widget_size d-flex align-items-center">
-                                <h3>Kích cỡ</h3>
-                                <ul>
-                                    @foreach (var item in Model.DetailProducts.ToList())
-                                    {
-                                        <li>
-                                            <a href="javascript:void(0)">@item.Size.Name</a>
-                                        </li>
-                                    }
-                                </ul>
-                            </div>
-
-                            <div class="variant_quantity_btn d-flex">
-                                <div class="pro-qty border">
-                                    <input min="1" max="100" type="tex" value="1">
-                                </div>
-                                <button class="button btn btn-primary" type="submit"><i class="ion-android-add"></i> Thêm Vào Giỏ hàng</button>
-                                <a data-tippy="Thêm vào yêu thích" class="wishlist"><i class="ion-ios-heart"></i></a>
-                            </div>
-                        </div>
-                        <div class="product_sku">
-                            <p><span>SKU: </span> #PRODUCT@(Model.ID.ToString("D8"))</p>
-                        </div>
-                        <div class="product_tags d-flex">
-                            <span>tags: </span>
-                            <ul class="d-flex">
-                                <li><a href="#">@Model.Categories.Name</a></li>
-                            </ul>
-                        </div>
-                        <div class="priduct_social d-flex">
-                            <span>SHARE: </span>
+                    </div>
+                    <div class="product_availalbe">
+                        <ul class="d-flex">
+                            <li><i class="icon-layers icons"></i> Kho: <span>@Model.DetailProducts.Sum(s => s.Quantity)</span></li>
+                            <li>Hàng: <span class="stock">May 2 - 15 ngày</span></li>
+                        </ul>
+                    </div>
+                    <div class="product_variant">
+                        <div class="filter__list widget_color d-flex align-items-center">
+                            <h3>Màu :</h3>
                             <ul>
-                                <li><a href="#"><i class="ion-social-twitter"></i></a></li>
-                                <li><a href="#"><i class="ion-social-facebook"></i></a></li>
-                                <li><a href="#"><i class="ion-social-googleplus-outline"></i></a></li>
-                                <li><a href="#"><i class="ion-social-pinterest"></i></a></li>
-                                <li><a href="#"><i class="ion-social-instagram-outline"></i></a></li>
+                                @foreach (var items in Model.DetailProducts.ToList())
+                                {
+                                    <li>
+                                        <label data-images="@items.Images.Split('=')[2]" class="checkmark color3" name="@items.Colors.ID" id="checkmaulabel-@items.Colors.ID">@items.Colors.Name</label>
+                                        <input hidden id="valuecolor" value="" />
+                                    </li>
+                                }
                             </ul>
                         </div>
-                    </form>
+                        <div class="filter__list widget_color d-flex align-items-center">
+                            <h3>Size :</h3>
+                            <ul>
+                                @foreach (var items in Model.DetailProducts.GroupBy(g => g.ID_Size, g => g.Size.Name, (key, g) => new { ID_Size = key, Size_Name = g.First() }).ToList())
+                                {
+                                    <li>
+                                        <label class="checkmark color3" name="@items.ID_Size" id="checksizelabel-@items.ID_Size">@items.Size_Name</label>
+                                        <input hidden id="valuesize" value="" />
+                                    </li>
+                                }
+                            </ul>
+                        </div>
+
+                        <div class="variant_quantity_btn d-flex">
+                            <div class="pro-qty border">
+                                <input id="soluongsanpham" min="1" max="100" type="number" value="1">
+                            </div>
+                            <button id="addgiohang" name="@Model.ID" class="button btn btn-primary"><i class="ion-android-add"></i> Thêm Vào Giỏ hàng</button>
+                            <a data-tippy="Thêm vào yêu thích" class="wishlist"><i class="ion-ios-heart"></i></a>
+                        </div>
+                    </div>
+                    <div class="product_sku">
+                        <p><span>SKU: </span> #PRODUCT@(Model.ID.ToString("D6"))</p>
+                    </div>
+                    <div class="product_tags d-flex">
+                        <span>DANH MỤC: </span>
+                        <ul class="d-flex">
+                            <li><a href="#">@Model.Categories.Name</a></li>
+                        </ul>
+                    </div>
+                    <div class="priduct_social d-flex">
+                        <span>SHARE: </span>
+                        <ul>
+                            <li><a href="#"><i class="ion-social-twitter"></i></a></li>
+                            <li><a href="#"><i class="ion-social-facebook"></i></a></li>
+                            <li><a href="#"><i class="ion-social-googleplus-outline"></i></a></li>
+                            <li><a href="#"><i class="ion-social-pinterest"></i></a></li>
+                            <li><a href="#"><i class="ion-social-instagram-outline"></i></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -267,25 +265,13 @@
                 @foreach (var item in relateProduct.ToList())
                 {
                     <div class="col-lg-3">
-                        <article class="single_product">
+                        <article class="col single_product">
                             <figure>
                                 <div class="product_thumb">
                                     <a>
                                         <img class="primary_img" src="@item.Images.Split('#')[0].ToString()"
                                              alt="consectetur">
                                     </a>
-                                    <div class="product_action">
-                                        <ul>
-                                            <li class="quick_view">
-                                                <a data-toggle="modal" data-target="#modal_box"
-                                                   data-tippy="Xem nhanh chi tiết" href="#" data-tippy-inertia="true"
-                                                   data-tippy-delay="50" data-tippy-arrow="true"
-                                                   data-tippy-placement="left">
-                                                    <i class="icon-size-fullscreen icons"></i>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </div>
                                     @{
                                         var sales = item.DetailProducts.OrderByDescending(o => o.Sale).First().Sale;
                                         if (sales != 0)
@@ -308,7 +294,7 @@
                                         </ul>
                                     </div>
                                     <h4 class="product_name">
-                                        <a href="@Url.Action("productdetail", "home", new {id = item.ID})">@item.Name</a>
+                                        <a onclick="$('#Loaders').fadeIn('slow');" href="@Url.Action("productdetail", "home", new {id = item.ID})">@item.Name</a>
                                     </h4>
                                     <div class="price_box">
                                         @{
@@ -325,18 +311,17 @@
                                         }
                                     </div>
                                     <div class="add_to_cart">
-                                        <a class="btn btn-primary" href="#"
-                                           data-tippy-inertia="true" data-tippy-delay="50" data-tippy-arrow="true"
-                                           data-tippy-placement="top">Thêm Vào Giỏ</a>
+                                        <a onclick="$('#Loaders').fadeIn('slow');" class="btn btn-primary" href="@Url.Action("productdetail", "home", new { id = item.ID })">Xem Chi Tiết</a>
                                     </div>
                                 </figcaption>
                             </figure>
                         </article>
-
                     </div>
                 }
             </div>
         </div>
     </div>
 </section>
+
 <!--product area end-->
+<script src="~/Validation/addCart.js"></script>
