Changes connect string database

--- a/caykimnho_studio/Views/Shared/_Layout.cshtml
+++ b/caykimnho_studio/Views/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿@using caykimnho_studio.Models
 @{
-    caykimnhoEntities models = new caykimnhoEntities();
+    aendysho_caykimnhoEntities models = new aendysho_caykimnhoEntities();
     var colors = models.Colors.ToList();
     var sizes = models.Size.ToList();
     var categories = Session["lst-category"] as IEnumerable<Categories>;
