--- a/caykimnho_studio/Views/Home/_minicart.cshtml
+++ b/caykimnho_studio/Views/Home/_minicart.cshtml
@@ -1,6 +1,6 @@
 ﻿@using caykimnho_studio.Models
 @{
-    caykimnhoEntities models = new caykimnhoEntities();
+    aendysho_caykimnhoEntities models = new aendysho_caykimnhoEntities();
     var colors = models.Colors.ToList();
     var sizes = models.Size.ToList();
     int totalCart = Convert.ToInt32(Session["cart-total"].ToString());
